# grpc-test-project

./: .gitignore  Dockerfile  README.md  generate.sh  greeter_server.py  helloworld.proto  pyproject.toml  requirements.txt  run_conteiners.sh
grpc_test_project/: acyncio_test.py  greeter_client.py  greeter_server.py  normal_asyncio.py  numpy_quaternion.py
research_docs/: bench.md  docker_performance.md
