[tool.poetry]
name = "grpc-test-project"
version = "0.1.0"
description = ""
authors = ["Rustam Akhmadullin"]
readme = "README.md"
packages = [{include = "grpc_test_project"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
grpcio = "^1.65.5"
grpcio-tools = "^1.65.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
